@@ -28,7 +28,7 @@
             android:src="@drawable/icon_login" />
 
         <EditText
-            android:id="@+id/usuario_login"
+            android:id="@+id/email_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/rounded_corner"
