@@ -3,3 +3,4 @@ Add:
     1. Primeiro commit, adicionando a primeira versão da aplicação.
     2. Refatorado o projeto, adicionando alguns pacotes e mudando paths. Além disso adicionado o sistema de cadastro
         usando o firebase. Por enquanto apenas email + senha disponíveis.
+    3. Adicionando melhorias nos tratamentos de login e email, validação de cpf/cnpj pendentes.
